;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(ocamllex
 (modules tsl_lexer)
 (mode fallback))

(ocamlyacc
 (modules tsl_parser)
 (mode fallback))

;; FIXME: handle UNIX_OR_WIN32 or something similar

(rule
 (deps ocamltest_unix_real.ml)
 (targets ocamltest_unix.ml)
 (action
  (copy ocamltest_unix_real.ml ocamltest_unix.ml)))

(library
 (name ocamltest_core_and_plugin)
 (modes byte)
 (wrapped false)
 (flags
  (:standard -nostdlib))
 (libraries ocamlcommon stdlib unix)
 (modules
  (:standard \ options main ocamltest_unix_dummy ocamltest_unix_real))
 (foreign_stubs
  (language c)
  (names run_unix run_stubs)
  (flags
   ((-DCAML_INTERNALS)
    (:include %{project_root}/oc_cflags.sexp)
    (:include %{project_root}/oc_cppflags.sexp)))))

(rule
 (targets empty.ml)
 (deps
  (source_tree ../%{env:RUNTIME_DIR=runtime-dir-env-var-not-set}/caml))
 (action
  (write-file %{targets} "(* hack *)")))

(executable
 (name main)
 (modes byte)
 (flags
  (:standard -cclib "-I../%{env:RUNTIME_DIR=runtime-dir-env-var-not-set}"))
 (modules options main)
 (libraries ocamltest_core_and_plugin))

(rule
 (copy main.exe ocamltest.byte))
