;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(rule
 (targets primitives)
 (mode    fallback)
 (deps
   ; matches the line structure of files in gen_primitives.sh
   alloc.c array.c compare.c extern.c floats.c gc_ctrl.c hash.c intern.c
     interp.c ints.c io.c
   lexing.c md5.c meta.c memprof.c obj.c parsing.c signals.c str.c sys.c
     callback.c weak.c
   finalise.c stacks.c dynlink.c backtrace_byt.c backtrace.c
     afl.c
   bigarray.c prng.c eventlog.c misc.c domain.c float32.c)
 (action  (with-stdout-to %{targets} (run %{dep:gen_primitives.sh}))))

(rule
 (targets libasmrun.a libasmrund.a libasmruni.a libasmrun_pic.a libasmrunnnp.a
    libasmrun_shared.so libcamlrun.a libcamlrund.a libcamlruni.a libcamlrun_pic.a
    libcamlrun_shared.so ocamlrun ocamlrund ocamlruni ld.conf
    sak)
 (mode    fallback)
 (deps
   ../Makefile.config
   ../Makefile.build_config
   ../Makefile.config_if_required
   ../Makefile.common Makefile
   (glob_files caml/*.h)
   caml/domain_state.tbl
   primitives
   signals_osdep.h (glob_files *.S)
   (glob_files *.c)
 )
 (action
 (no-infer
   (progn
     (bash "touch .depend") ; hack.
     (run make "SAK_LINK=cc -o $(1) $(2)" COMPUTE_DEPS=false sak)
     (run make -sj8 %{targets} COMPUTE_DEPS=false)
     (bash "rm .depend")))))

(install
  (files
    ocamlrun
    ocamlrund
    ocamlruni
  )
  (section bin)
  (package ocaml_runtime_stdlib))

(install
  (files
    ld.conf

    libcamlrun.a
    libcamlrund.a
    libcamlruni.a
    libcamlrun_pic.a
    libcamlrun_shared.so
  )
  (section lib)
  (package ocaml_runtime_stdlib))

(install
  (files
    libasmrun.a
    libasmrund.a
    libasmruni.a
    libasmrun_pic.a
    libasmrunnnp.a
    libasmrun_shared.so
  )
  (section lib)
  (package ocaml_runtime_stdlib))
