;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(executable
  (name flambda_backend_objinfo)
  (modes byte native)
  (modules flambda_backend_objinfo)
  (libraries ocamlcommon ocamlbytecomp ocamloptcomp))

(install
  (files
    (flambda_backend_objinfo.bc as ocamlobjinfo.byte)
    (flambda_backend_objinfo.exe as ocamlobjinfo.opt)
  )
  (section bin)
  (package ocaml))

(executable
  (name merge_archives)
  (modes native)
  (modules merge_archives)
  (libraries ocamlcommon ocamlbytecomp ocamloptcomp))

(executable
  (name gen_compiler_libs_installation)
  (modes native)
  (modules gen_compiler_libs_installation))
