;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(executable
  (name objinfo)
  (modes byte native)
  (modules objinfo)
  (libraries ocamlcommon ocamlbytecomp ocamloptcomp))

(executables
 (names   make_opcodes cvt_emit)
 (modules make_opcodes cvt_emit))

(ocamllex
 (modules make_opcodes)
 (mode    fallback))

(ocamllex
 (modules cvt_emit)
 (mode    fallback))

(executable
  (name ocamldep)
  (modes byte native)
  (modules ocamldep)
  (libraries ocamlcommon ocamlbytecomp))

(install
  (files
    (ocamldep.bc as ocamldep.byte)
    (ocamldep.exe as ocamldep.opt)
  )
  (section bin)
  (package ocaml))

(rule
  (target opnames.ml)
  (deps make_opcodes.exe (universe))
  (action (system "./make_opcodes.exe -opnames < ../../ocaml/runtime4/caml/instruct.h > opnames.ml")))

(library
  (name opnames)
  (modes byte)
  (modules opnames))

(executable
  (name dumpobj)
  (modes byte)
  (modules dumpobj)
  (libraries ocamlcommon ocamlbytecomp opnames))

(executable
  (name cmpbyt)
  (modes byte)
  (modules cmpbyt)
  (libraries ocamlcommon ocamlbytecomp))

(executable
  (name ocamlmklib)
  (modes byte native)
  (modules ocamlmklib)
  (libraries ocamlcommon ocamlbytecomp))

(install
  (files
    (ocamlmklib.bc as ocamlmklib.byte)
    (ocamlmklib.exe as ocamlmklib.opt)
  )
  (section bin)
  (package ocaml))

(executable
  (name ocamlmktop)
  (modes byte native)
  (modules ocamlmktop)
  (libraries ocamlcommon ocamlbytecomp))

(install
  (files
    (ocamlmktop.bc as ocamlmktop.byte)
    (ocamlmktop.exe as ocamlmktop.opt)
  )
  (section bin)
  (package ocaml))

(install
  (files
    eventlog_metadata
  )
  (section lib)
  (package ocaml))

(library
  (name debug_printers)
  (modes byte)
  (libraries ocamlcommon)
  (modules debug_printers))

(rule
  (target debug_printers)
  (deps debug_printers.ml %{cmo:debug_printers})
  (action
    (with-stdout-to %{target}
      (progn
        ; Resorting to Bash instead of the built-in [echo] action because I
        ; couldn't find a better way to get an absolute path out of Dune
        (bash "echo load_printer \\\"$(realpath %{cmo:debug_printers})\\\"")
        (with-stdin-from debug_printers.ml
          (run awk "{ print \"install_printer Debug_printers.\" $2 }"))))))

; ocamlcp, ocamloptp and ocamlprof are not currently supported.
