;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(executable
 (name flambda_backend_objinfo)
 (modes byte native)
 (modules flambda_backend_objinfo)
 (libraries ocamlcommon ocamlbytecomp ocamloptcomp))

(executable
 (name generate_cached_generic_functions)
 (modes byte native)
 (modules generate_cached_generic_functions)
 ; FIXME Fix warnings 27 and 33
 (flags (:standard -w -27-33-69-70))
 (libraries ocamlcommon ocamloptcomp unix memtrace))

(install
 (files
  (flambda_backend_objinfo.bc as ocamlobjinfo.byte)
  (flambda_backend_objinfo.exe as ocamlobjinfo.opt)
  generate_cached_generic_functions.exe)
 (section bin)
 (package ocaml))

(executable
 (name merge_archives)
 (modes native)
 (modules merge_archives)
 ; FIXME Fix warning 27
 (flags (:standard -w -27))
 (libraries ocamlcommon ocamlbytecomp ocamloptcomp))

(executable
 (name gen_compiler_libs_installation)
 (modes native)
 (modules gen_compiler_libs_installation))
