(include_subdirs unqualified)

(library
 (name flambda2)
 (wrapped false)
 (flags
  (:standard
   -principal
   -nostdlib
   -open
   Flambda2_cmx
   -open
   Flambda2_from_lambda
   -open
   Flambda2_parser
   -open
   Flambda2_simplify
   -open
   Flambda2_terms
   -open
   Flambda2_to_cmm
   -open
   Flambda2_ui))
 (ocamlopt_flags
  (:standard -O2))
 (modules flambda2)
 (libraries
  stdlib
  ocamlcommon
  ocamlbytecomp
  ocamloptcomp
  flambda2_cmx
  flambda2_from_lambda
  flambda2_parser
  flambda2_simplify
  flambda2_terms
  flambda2_to_cmm
  flambda2_ui))
