(include_subdirs unqualified)

(env
 (_
  (flags
   (:standard -w +a-30-40-41-42-69-70))))

(library
 (name flambda2)
 (wrapped false)
 (instrumentation
  (backend bisect_ppx))
 (flags
  (:standard
   -principal
   -open
   Flambda2_lattices
   -open
   Flambda2_cmx
   -open
   Flambda2_from_lambda
   -open
   Flambda2_parser
   -open
   Flambda2_simplify
   -open
   Flambda2_simplify_shared
   -open
   Flambda2_terms
   -open
   Flambda2_to_cmm
   -open
   Flambda2_ui))
 (ocamlopt_flags
  (:standard))
 (modules flambda2)
 (libraries
  ocamlcommon
  ocamlbytecomp
  ocamloptcomp
  flambda2_lattices
  flambda2_cmx
  flambda2_from_lambda
  flambda2_parser
  flambda2_simplify
  flambda2_simplify_shared
  flambda2_terms
  flambda2_to_cmm
  flambda2_ui))
