;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(ocamllex debugger_lexer)
(ocamlyacc debugger_parser)

(library
 (name ocamldebug)
 (flags (:standard -principal -w -9))
 (modules (:standard \ ocamldebug_entry))
 (modules_without_implementation parser_aux)
 (libraries ocamlcommon ocamltoplevel unix dynlink_internal))

(executable
  (name ocamldebug_entry)
  (modes byte)
  (modules ocamldebug_entry)
  (libraries unix ocamldebug))

(install
  (files (ocamldebug_entry.bc as ocamldebug))
  (section bin)
  (package ocaml))
