;**************************************************************************
;*                                                                        *
;*                 The Flambda backend project for OCaml                  *
;*                                                                        *
;*                    Mark Shinwell, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2020 Jane Street Group LLC                                 *
;*                                                                        *
;**************************************************************************

(ocamllex lexer)
(ocamlyacc parser)

(library
  (name ocamllex_lib)
  (wrapped false)
  (modes byte native)
  (flags (:standard -principal -nostdlib))
  (libraries stdlib)
  (modules
    common
    compact
    cset
    lexer
    lexgen
    output
    outputbis
    parser
    syntax
    table))

(executable
  (name main)
  (modes byte)
  (flags (:standard -principal -nostdlib
    -cclib "-I runtime" -cclib "-L runtime" -cclib -lcamlrun))
  (link_deps (file ../stdlib/camlheader) (file ../runtime/libcamlrun.a))
  (libraries ocamllex_lib stdlib)
  (modules main))

(rule
  (targets main_native.ml)
  (action (copy main.ml %{targets})))

(executable
  (name main_native)
  (modes native)
  (flags (:standard -principal -nostdlib))
  (libraries ocamllex_lib stdlib runtime_native)
  (modules main_native))

; For some reason if we install files as "ocamllex" then dune claims there
; is a circular dependency, which there should not be, since ocamllex from
; the "ocamllex" stanza above should be the one on the PATH and not from the
; build directory.  For the moment we do the copy to "ocamllex" in the
; Flambda backend Makefile.

(install
  (files
    (main.bc as ocamllex.byte)
    (main_native.exe as ocamllex.opt)
  )
  (section bin)
  (package ocaml))
